--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 ---
-layout: default
+layout: bootstrap
 title: test title
 ---
-<p>Hello world!</p>
+<p>我的博客</p>
+<p>My post list:</p>
+<ul>
+   {% for post in site.posts %}
+       <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+   {% endfor %}
+</ul>
