--- a/_posts/2017-04-05-git-instructions.html
+++ b/_posts/2017-04-05-git-instructions.html
@@ -13,7 +13,7 @@ title: git 常用指令
           </thead>
           <tbody>
             <tr>
-              <td>git config --global user.name "Your Name"</td>
+              <td><code>git config --global user.name "Your Name"</code></td>
               <td>设置github 账户名</td>
             </tr>
             <tr>
